--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,6 +17,8 @@ concurrency:
 jobs:
   build:
     runs-on: ubuntu-latest
+    environment:
+      name: github-pages
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -31,9 +33,9 @@ jobs:
         run: npm ci
 
       - name: Build
-        run: npm run build
         env:
-          CI: false
+          VITE_GEMINI_API_KEY: ${{ secrets.VITE_GEMINI_API_KEY }}
+        run: npm run build
 
       - name: Setup Pages
         uses: actions/configure-pages@v4
