--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,7 +34,10 @@ jobs:
 
       - name: Build
         env:
-          VITE_GEMINI_API_KEY: ${{ secrets.VITE_GEMINI_API_KEY }}
+          VITE_OPENAI_API_KEY: ${{ secrets.VITE_OPENAI_API_KEY }}
+          VITE_USE_MOCK_DATA: ${{ secrets.VITE_USE_MOCK_DATA }}
+          VITE_MAX_UPLOAD_SIZE_MB: ${{ secrets.VITE_MAX_UPLOAD_SIZE_MB }}
+          VITE_ALLOWED_FILE_TYPES: ${{ secrets.VITE_ALLOWED_FILE_TYPES }}
         run: npm run build
 
       - name: Setup Pages
