--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,6 +34,7 @@ jobs:
 
       - name: Build
         env:
+          VITE_GEMINI_API_KEY: ${{ secrets.VITE_GEMINI_API_KEY }}
           VITE_OPENAI_API_KEY: ${{ secrets.VITE_OPENAI_API_KEY }}
           VITE_USE_MOCK_DATA: ${{ secrets.VITE_USE_MOCK_DATA }}
           VITE_MAX_UPLOAD_SIZE_MB: ${{ secrets.VITE_MAX_UPLOAD_SIZE_MB }}
